--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Your Name"
 description              : &description "personal description"
 url                      : https://chaojidahoufeng.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "Chaojidahoufeng/Chaojidahoufeng.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,10 +24,10 @@ author:
   avatar           : "profile.png"
   name             : "Yuzi Yan 严谕梓"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D candidate in EE"
+  bio              : "Keep chasing the Plato's eternal stars beyond the cave."
   location         : "China"
   employer         : "Tsinghua University"
-  uri              : # URL
+  uri              : https://Chaojidahoufeng.github.io
   email            : "yan-yz17@tsinghua.org.cn" 
 
   # Academic websites
@@ -43,12 +43,12 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "Chaojidahoufeng"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
